--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script type="text/javascript">
             $(window).on('load', function () {
                 $('#play-btn').on('click', function () {
-                    window.location.href = './player.html' + '#' + $('#m3u8-placeholder')[0].value;
+                    window.location.href = './player' + '#' + $('#m3u8-placeholder')[0].value;
                 });
             })
         </script>
