--- a/player/index.html
+++ b/player/index.html
@@ -1,4 +1,8 @@
 <html><head>
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="hls.min.js"></script>
   <style>
     body{
