--- a/player/index.html
+++ b/player/index.html
@@ -4,6 +4,7 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="hls.min.js"></script>
+  <script src="mousetrap.min.js" charset="utf-8"></script>
   <style>
     body{
       background-color:black;
