Handle ENTER keydown with form submit.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <body>
         <div class="col-lg-6" id="text-box">
             <h1 class="page-name">M3U8 Player</h1>
-            <div class="input-group">
+            <form class="input-group" id="form">
                 <input type="text" class="form-control" placeholder="Paste the m3u8 link here" id="m3u8-placeholder" />
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" type="button" id="play-btn">Play</button>
+                    <button class="btn btn-primary" type="submit">Play</button>
                 </span>
-            </div>
+            </form>
         </div>
     </body>
 </html>
